--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
     <section id="introduction">
         <h2>Introduction</h2>
         <hr>
+        <section class="imgSection">
+        <img width="200px" src="https://pics.craiyon.com/2023-09-17/49c53c878ae1488d8c8cc12515ca0d6e.webp" alt="image">
+        <img width="200px" src="https://miro.medium.com/v2/resize:fit:940/1*CTt5xtoJCBpC2eso7HPFfA.png" alt="image">
+        <img width="200px" src="https://pics.craiyon.com/2023-12-12/o6lU1UBDSOqJeKt0RbA0XA.webp" alt="image">
+        
+    </section>
         <p>A programming language is a formal language designed for writing computer programs. It allows developers to
             describe instructions that a computer should execute.<br>Each programming language has its own syntax and
             semantics, which define its structure and behavior.</p>
@@ -99,6 +105,9 @@
                     <li>Popular for enterprise applications</li>
                     <li>Has a syntax similar to C++ and Java</li>
                 </ul>
+                <a href="https://learn.microsoft.com/en-us/dotnet/csharp/">
+                <img src="https://miro.medium.com/v2/resize:fit:1400/1*_NVBTVdmjt3Qvq3CZOySXg.png" width="50px" alt="c#">
+            </a>
             </div>
             <div class="column">
                 <h2>Python</h2>
@@ -115,6 +124,9 @@
                     <li>Widely used in data science and machine learning</li>
                     <li>Known for its clear and concise syntax</li>
                 </ul>
+                <a href="https://www.python.org/">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1200px-Python-logo-notext.svg.png" width="30px" alt="c#">
+</a>
             </div>
         </div>
     </section>
