--- a/VanGoghSite/contact.html
+++ b/VanGoghSite/contact.html
@@ -16,7 +16,7 @@
             <li><a href="#">Gallery</a>
                 <ul>
                     <li><a href="mostpopularworks.html">Most popular works</a></li>
-                    <li><a href="#">All paintings</a></li>
+                    <li><a href="allpaintings.html">All paintings</a></li>
                     <li><a href="exhibitions.html">Exhibitions</a></li>
 
                 </ul>
@@ -28,11 +28,13 @@
 </header>
 
 <main>
-    <p>click here to see full collection of Van Gogh's artworks</p>
-    <a href="https://en.wikipedia.org/wiki/List_of_works_by_Vincent_van_Gogh"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSpo5aBoRUgYCaHv6F6zXYXiKMJrsTIpIUFJQc-P-qyi4VsAakJHzq9P741mWiskRvUz7Y&usqp=CAU" width="200" alt=""></a>
-    <hr>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/wk9L1N9bRRE?si=Deo7tzijLNs0jUNk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
+    <h2>Contact Information</h2>
+    <p>If you have any questions, suggestions, or inquiries, please feel free to contact me using the information below:</p>
+    
+        <p>Email: yusufovamina@gmail.com</p>
+        <p>Phone: +(994) 11 111 11 11</p>
+        <p>Address: 123 Van Gogh Street, Amsterdam, Netherlands</p>
+    <img src="https://static.toiimg.com/thumb/106676558.cms?width=400&height=300&resizemode=4&imgsize=104172" width="450" alt="">
 </main>
 
 <footer>
