--- a/VanGoghSite/mostpopularworks.html
+++ b/VanGoghSite/mostpopularworks.html
@@ -16,13 +16,13 @@
             <li><a href="#">Gallery</a>
                 <ul>
                     <li><a href="mostpopularworks.html">Most popular works</a></li>
-                    <li><a href="#">All paintings</a></li>
-                    <li><a href="#">Exhibitions</a></li>
+                    <li><a href="allpaintings.html">All paintings</a></li>
+                    <li><a href="exhibitions.html">Exhibitions</a></li>
 
                 </ul>
             </li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 </header>
