--- a/VanGoghSite/index.html
+++ b/VanGoghSite/index.html
@@ -13,16 +13,16 @@
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Gallery</a>
-                <ul>
+            <li class="dropdown-element"><a href="#">Gallery</a>
+                <ul class="dropdown-menu">
                     <li><a href="mostpopularworks.html">Most popular works</a></li>
                     <li><a href="allpaintings.html">All paintings</a></li>
-                    <li><a href="#">Exhibitions</a></li>
+                    <li><a href="exhibitions.html">Exhibitions</a></li>
 
                 </ul>
             </li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 </header>
